# beidanci

./: Cargo.toml  Rocket.toml  dev
migrations/2021-04-27-030420_create_vocabs/: down.sql  up.sql
src/: main.rs  tests.rs  types.rs
src/db/: mod.rs  paginate.rs  schema.rs
